<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>bbva.ndb</groupId>
    <artifactId>archer-lib</artifactId>
    <packaging>pom</packaging>
    <version>5.0.0</version>

    <properties>
        <java.version>1.8</java.version>
        <kafka.version>2.0.0</kafka.version>
        <kafka.scala.version>2.11</kafka.scala.version>
        <scala.version>${kafka.scala.version}.8</scala.version>
        <confluent.version>5.0.0</confluent.version>
        <avro.version>1.8.2</avro.version>
        <jersey.version>2.25</jersey.version>
        <jetty.version>9.2.24.v20180105</jetty.version>
        <jackson.version>2.9.4</jackson.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>kst-archer-lib-common</module>
        <module>kst-archer-lib-common-test</module>
        <module>kst-archer-lib-data-processors</module>
        <module>kst-archer-lib-ddd</module>
        <module>kst-archer-lib-gateway</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>proyecto-s3-release</id>
            <name>AWS S3 Release Repository</name>
            <url>s3://microservices-java-repository/maven/release</url>
        </repository>
        <snapshotRepository>
            <id>proyecto-s3-snapshot</id>
            <name>AWS S3 Snapshot Repository</name>
            <url>s3://microservices-java-repository/maven/snapshot</url>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>proyecto-s3-release</id>
            <url>s3://microservices-java-repository/maven/release</url>
        </repository>
        <repository>
            <id>proyecto-s3-snapshot</id>
            <url>s3://microservices-java-repository/maven/snapshot</url>
        </repository>
        <repository>
            <id>confluent</id>
            <url>http://packages.confluent.io/maven/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-streams</artifactId>
            <version>${kafka.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka_${kafka.scala.version}</artifactId>
            <version>${kafka.version}</version>
        </dependency>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <!-- This version must be compatible with the Scala version of the Kafka dependency. -->
            <version>${scala.version}</version>
        </dependency>
        <dependency>
            <groupId>javax.ws.rs</groupId>
            <artifactId>javax.ws.rs-api</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.9.11</version>
        </dependency>
    </dependencies>
    <build>
        <extensions>
            <extension>
                <groupId>org.springframework.build</groupId>
                <artifactId>aws-maven</artifactId>
                <version>5.0.0.RELEASE</version>
            </extension>
        </extensions>

        <plugins>
            <!-- run mvn formatter:format -->
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>2.8.1</version>
            </plugin>

        </plugins>
    </build>


</project>
